eclipse-workspace/.metadata/.plugins/org.eclipse.cdt.ui/SGX_SQLite.build.log
21:39:05 **** Incremental Build of configuration Intel(R) SGX Simulation Debug for project SGX_SQLite ****
make SGX_DEBUG=1 SGX_MODE=SIM -f sgx/Makefile 
make -C ./sgx/enclave_sqlite  -f sgx_t_u.mk all;
make[1]: Entering directory '/home/sgx/M-AI-CryptographicProtocols/eclipse-workspace/SGX_SQLite/sgx/enclave_sqlite'
g++ -m64 -O0 -g  -nostdinc -fvisibility=hidden -fpie -ffunction-sections -fdata-sections -fstack-protector-strong -IEnclave -I/opt/intel/sgxsdk/include -I/opt/intel/sgxsdk/include/tlibc -I/opt/intel/sgxsdk/include/libcxx -std=c++11 -nostdinc++ -c Enclave/Enclave.cpp -o Enclave/Enclave.o
Enclave/Enclave.cpp: In function ‘void ecall_encrypt()’:
Enclave/Enclave.cpp:45:65: error: expected primary-expression before ‘,’ token
  if (sizeof(plaintext) == sizeof(decrypted) && memcmp(plaintext*, decrypted*, sizeof(plaintext)) == 0){
                                                                 ^
Enclave/Enclave.cpp:45:77: error: expected primary-expression before ‘,’ token
  if (sizeof(plaintext) == sizeof(decrypted) && memcmp(plaintext*, decrypted*, sizeof(plaintext)) == 0){
                                                                             ^
make[1]: *** [Enclave/Enclave.o] Error 1
sgx_t_u.mk:214: recipe for target 'Enclave/Enclave.o' failed
make[1]: Leaving directory '/home/sgx/M-AI-CryptographicProtocols/eclipse-workspace/SGX_SQLite/sgx/enclave_sqlite'
make: *** [all] Error 2
sgx/Makefile:9: recipe for target 'all' failed
"make SGX_DEBUG=1 SGX_MODE=SIM -f sgx/Makefile" terminated with exit code 2. Build might be incomplete.

21:39:05 Build Failed. 6 errors, 0 warnings. (took 270ms)

